--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
 	<div class="inner">
 		<div class="logo"><span class="icon fa-eye"></span></div>
 		<h2>open eyewear</h2>
-    <p>Amplifying the Human Mind</p>
+    <p>Amplifying the Human Intellect</p>
 		</div>
 </section>
 
