--- a/eyewear2019/css/clean-blog.css
+++ b/eyewear2019/css/clean-blog.css
@@ -404,8 +404,8 @@ footer .copyright {
 }
 
 .btn-primary {
-  background-color: #0085A1;
-  border-color: #0085A1;
+  background-color: #bae520;
+  border-color: #bae520;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
