--- a/eyewear2019/css/clean-blog.css
+++ b/eyewear2019/css/clean-blog.css
@@ -410,8 +410,8 @@ footer .copyright {
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   color: #fff;
-  background-color: #00657b !important;
-  border-color: #00657b !important;
+  background-color: #bae520 !important;
+  border-color: #bae520 !important;
 }
 
 .btn-lg {
