--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -28,3 +28,10 @@
 .badge-warning {
   background-color: $yellow-500;
 }
+
+@media (max-width: 768px) {
+  .big {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
